--- a/app/styles/storage-list-view.scss
+++ b/app/styles/storage-list-view.scss
@@ -7,7 +7,4 @@
         padding-bottom: 5px;
         padding-top: 5px;
     }
-    .pool-list-view-description{
-        width: 30%;
-    }
 }
